<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:background="#ABABAB" >

        <TextView
            android:id="@+id/employeeNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/employeeNameLbl"
            android:layout_alignBottom="@+id/employeeNameLbl"
            android:layout_alignLeft="@+id/grantIdTv"
            android:text="employee name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/catalogTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/catalogLbl"
            android:layout_alignBottom="@+id/catalogLbl"
            android:layout_alignLeft="@+id/employeeNameTv"
            android:text="catalog number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/grantIdLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/grantNameLbl"
            android:text="@string/grantIdLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/employeeNameLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/catalogLbl"
            android:text="@string/employeeNameLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/catalogLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/grantIdLbl"
            android:text="@string/catalogLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/grantIdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/catalogTv"
            android:layout_centerHorizontal="true"
            android:text="grant id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/grantNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/grantIdTv"
            android:layout_alignLeft="@+id/grantIdTv"
            android:text="waiting for data..."
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/grantNameLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/logoIv"
            android:layout_marginTop="26dp"
            android:text="@string/grantNameLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/logoIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/grantIdTv"
            android:contentDescription="Logo"
            android:src="@drawable/grantappicon" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_weight="0.14" >

        <TableRow>

            <TextView
                android:id="@+id/dateLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="date"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/dayOfWeeklLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayOfWeekLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/dayOfWeekTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/grantHourslLbl"
            android:layout_alignLeft="@+id/grantHoursTv"
            android:text="day of week"
            android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </TableRow>
        
        <TableRow>

            <TextView
                android:id="@+id/grantHourslLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grantHoursLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/grantHoursTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="grant hours"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        
        
        <TableRow>

            <TextView
                android:id="@+id/nonGrantHoursLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grantHourslLbl"
                android:text="@string/nonGrantHoursLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/nonGrantHoursTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/leaveHoursLbl"
                android:inputType="numberDecimal"
                android:text="non-grant hours"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        
        <TableRow>
            <TextView
                android:id="@+id/leaveHoursLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaveHoursLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/leaveHoursTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="leave hours"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        <TableRow>


            <TextView
                android:id="@+id/dayTotalLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTotalLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/dayTotalHoursTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="total day hours"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/monthTotalLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthTotalLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/monthTotalHoursTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="monthly hours"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>




    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ABABAB" >

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="32dp"
            android:text="Next" />

        <Button
            android:id="@+id/returnBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Return" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="Previous" />

    </RelativeLayout>

</LinearLayout>